--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,14 @@ body {
   font-size: 32px;
 }
 
+.call-back__form {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
+          box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
+  padding: 50px 20px;
+}
+
 .call-back__form .input-form {
   border-radius: 5px;
 }
