--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,14 @@ body {
       align-self: flex-start;
   -webkit-box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
           box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
-  padding: 50px 20px;
+  padding: 30px 20px 50px;
+}
+
+.call-back__form .title-form {
+  color: #fff;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 20px;
 }
 
 .call-back__form .input-form {
@@ -305,36 +312,68 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 50%;
+  margin-right: 50px;
 }
 
 .services__content-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 50%;
-  height: 100%;
+  min-width: 320px;
 }
 
 .services__tab {
+  margin-bottom: 10px;
+  padding: 8px 8px;
   cursor: pointer;
+  border: 2px solid #003dca;
+}
+
+.services__tab:last-child {
+  margin-bottom: 0;
+}
+
+.services__tab:hover {
+  background: #003dca;
+  color: #fff;
+  border: 2px solid #003dca;
 }
 
 .services__tab--active {
-  color: red;
+  background: #002d93;
+  color: #fff;
+  border: 2px solid #003dca;
 }
 
 .services__content {
   display: none;
   outline: 1px solid;
+  width: 100%;
+  padding: 8px 8px;
 }
 
 .services__content--active {
   display: block;
+}
+
+.services__tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.application__submit {
+  background: #002d93;
+  border: 2px solid #002d93;
+  color: #fff;
+  padding: 8px 8px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.application__submit:hover {
+  border: 2px solid #003dca;
+  background: #003dca;
 }
 
 .contact__inner {
@@ -357,6 +396,68 @@ body {
   padding: 0 10px;
 }
 
+.contact__item {
+  margin-bottom: 20px;
+}
+
+.contact__item:last-child {
+  margin-bottom: 0;
+}
+
+.contact__item h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+.contact__item h4 i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50px;
+  font-size: 26px;
+}
+
+.contact__item ul,
+.contact__item p {
+  padding-left: 50px;
+  line-height: 1.4;
+}
+
+.contact__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contact__social-list i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50px;
+  font-size: 22px;
+  color: #000;
+  border-radius: 5px;
+}
+
+.contact__social-list i:hover {
+  color: #003dca;
+}
+
 .contact__call-back {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -370,10 +471,37 @@ body {
 
 .contact__group {
   width: 100%;
+  margin-bottom: 20px;
+}
+
+.contact__group:last-child {
+  margin-bottom: 0;
 }
 
 .contact__input {
   width: 100%;
+  padding: 8px 8px;
+  border: none;
+  border-bottom: 1px solid;
+  outline: none;
+}
+
+.contact__textarea {
+  padding: 8px 8px;
+}
+
+.contact__submit {
+  background: #002d93;
+  border: 2px solid #002d93;
+  color: #fff;
+  padding: 8px 8px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.contact__submit:hover {
+  border: 2px solid #003dca;
+  background: #003dca;
 }
 
 .flags__title {
