--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,8 @@ body {
   height: 72px;
   z-index: 1;
   background: #Fff;
+  -webkit-box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
+          box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
 }
 
 .header .container {
@@ -223,6 +225,7 @@ body {
   position: relative;
   height: calc(100vh - 72px);
   max-height: 800px;
+  min-height: 500px;
   background-image: url("./../../img/bg3.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -362,6 +365,12 @@ body {
   display: flex;
 }
 
+.application__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .application__submit {
   background: #002d93;
   border: 2px solid #002d93;
@@ -374,6 +383,60 @@ body {
 .application__submit:hover {
   border: 2px solid #003dca;
   background: #003dca;
+}
+
+.input__wrapper {
+  position: relative;
+}
+
+.input__file {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.input__file-icon-wrapper {
+  height: 60px;
+  width: 60px;
+  margin-right: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-right: 1px solid #fff;
+}
+
+.input__file-button-text {
+  line-height: 1;
+  margin-top: 1px;
+}
+
+.input__file-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  max-width: 290px;
+  height: 60px;
+  margin: 0 auto;
+  padding: 8px 8px;
+  background: #1bbc9b;
+  color: #fff;
+  font-size: 1.125rem;
+  font-weight: 700;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .contact__inner {
