--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 72px;
-    z-index: 1;
+    z-index: 10;
     background: #Fff;
     // box-shadow: 0px -5px 5px -5px rgba(0, 0, 0, 0.6) inset;
     box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
@@ -36,6 +36,7 @@
     & .logo-link {
         font-size: 28px;
         font-weight: bold;
+        color: #000;
     } 
     & span {
         font-size: 14px;
@@ -113,7 +114,9 @@
 
 
 
-
+.wrapper h3 {
+    margin-bottom: 20px;
+}
 
 
 
@@ -226,6 +229,93 @@
         }
     }
 }
+.application__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    align-self: flex-start;
+    background: rgba(0,0,0,.6);
+    padding: 40px 20px;
+    border-radius: 5px;
+    
+    .title-form {
+        color: #fff;
+        padding: 0 15px 20px;
+        text-align: center;
+        font-size: 20px;
+        min-width: 320px;
+        max-width: 350px;
+    }
+    .input__wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        
+    }
+    label {
+        margin-bottom: 10px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    .input__file {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+    }
+    
+    .input__file-icon-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 8px;
+        border-right: 1px solid #fff;
+        color:#fff;
+    }
+    
+    .input__file-button-text {
+        line-height: 1;
+        margin-top: 1px;
+    }
+    
+    .input__file-button {
+    
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 100%;
+        margin: 0 auto;
+        padding: 8px 8px;
+        background: #1bbc9b;
+        color: #fff;
+        font-size: 1.125rem;
+        font-weight: 700;
+        border-radius: 3px;
+        cursor: pointer;
+        
+    }
+    & button {
+        background: #002d93;
+        border: 2px solid #002d93;
+        outline: none;
+        border-radius: 5px;
+        padding: 6px 16px;
+        cursor: pointer;
+        color: #fff;
+        &:hover {
+            border: 2px solid #003dca;
+            background: #003dca;
+        }
+    }
+    span {
+        color:#fff;
+    }
+}
+
+
+
 
 
 
@@ -283,100 +373,184 @@
 
 
 
-.application {
-    background: rgba(0,0,0,.6);
-    // box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
+// .application {
+//     background: rgba(0,0,0,.6);
+//     // box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
 
-    &__form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+//     // &__form {
+//     //     display: flex;
+//     //     flex-direction: column;
+//     //     align-items: center;
         
-    padding: 30px 20px;
-        .title-form {
-            color: #fff;
-            padding: 0 0 20px;
-            text-align: center;
+//     //     padding: 30px 20px;
+//     //     .title-form {
+//     //         color: #fff;
+//     //         padding: 0 0 20px;
+//     //         text-align: center;
+//     //         font-size: 20px;
+//     //     }
+//     // }
+
+
+    
+//     &__submit {
+//         background: #002d93;
+//         border: 2px solid #002d93;
+//         color:#fff;
+//         padding: 8px 8px;
+//         cursor: pointer;
+//         border-radius: 5px;
+//         &:hover {
+//             border: 2px solid #003dca;
+//             background: #003dca;
+//         }
+//     }
+// }
+
+// .input__wrapper {
+//     position: relative;
+// }
+
+// .input__file {
+//     opacity: 0;
+//     visibility: hidden;
+//     position: absolute;
+// }
+
+// .input__file-icon-wrapper {
+//     // height: 60px;
+//     // width: 60px;
+//     // margin-right: 15px;
+//     padding: 8px;
+//     display: -webkit-box;
+//     display: -ms-flexbox;
+//     display: flex;
+//     -webkit-box-align: center;
+//     -ms-flex-align: center;
+//         align-items: center;
+//     -webkit-box-pack: center;
+//     -ms-flex-pack: center;
+//         justify-content: center;
+//     border-right: 1px solid #fff;
+// }
+
+// .input__file-button-text {
+//     line-height: 1;
+//     margin-top: 1px;
+// }
+
+// .input__file-button {
+
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-start;
+//     // width: 100%;
+//     // max-width: 290px;
+//     // height: 60px;
+//     margin: 0 auto;
+//     padding: 8px 8px;
+//     background: #1bbc9b;
+//     color: #fff;
+//     font-size: 1.125rem;
+//     font-weight: 700;
+//     border-radius: 3px;
+//     cursor: pointer;
+    
+// }
+
+
+
+
+
+.reviews__inner {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.reviews__slider {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 100%;
+    min-width: 0;
+    margin: 0 auto;
+    padding: 0 50px;
+    height: 100%;
+
+    .slick-list {
+        height: 100%;
+        min-width: 0;
+        overflow: hidden;
+    }
+    .slick-track {
+        display: flex;
+        align-items: center;
+        min-width: 0;
+        height: 100%;
+        padding: 50px 0;
+    }
+    .slick-arrow {
+        position: absolute;
+        top: 50%;
+        z-index: 1;
+        font-size: 0;
+        width: 30px;
+        height: 50px;
+    }
+    .slick-arrow.slick-prev {
+        left: 0;
+        background: url('./../../img/la.svg') 0 0 / 100% no-repeat;
+    }
+    .slick-arrow.slick-next {
+        right: 0;
+        background: url('./../../img/ra.svg') 0 0 / 100% no-repeat;
+    }
+    .slick-prev:before {
+        content: '';
+    }
+    .slick-next:before {
+        content: '';
+    }
+    
+}
+.slick-initialized .slick-slide {
+    display: flex;
+}
+.review__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    padding: 20px;
+    max-width: 100%;
+    margin: 0 10px;
+    height: 230px;
+    border-radius: 5px;
+    transition: all 0.3s ease-out;
+    background: #fff;
+    &-title {
+        font-weight: bold;
+        font-style: italic;
+    }
+    &-info {
+        display: flex;
+        justify-content: space-between;
+    }
+    &.slick-center {
+        // height: 300px;
+        transform: scale(1.4);
+        .review__item-title {
             font-size: 20px;
         }
-    }
-    
-    &__submit {
-        background: #002d93;
-        border: 2px solid #002d93;
-        color:#fff;
-        padding: 8px 8px;
-        cursor: pointer;
-        border-radius: 5px;
-        &:hover {
-            border: 2px solid #003dca;
-            background: #003dca;
+        .review__item-text {
+            font-size: 10px;
+        }
+        .review__item-info {
+            font-size: 10px;
         }
     }
 }
-.input__wrapper {
-    position: relative;
-}
-
-.input__file {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-}
-
-.input__file-icon-wrapper {
-    // height: 60px;
-    // width: 60px;
-    // margin-right: 15px;
-    padding: 8px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-        align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-        justify-content: center;
-    border-right: 1px solid #fff;
-}
-
-.input__file-button-text {
-    line-height: 1;
-    margin-top: 1px;
-}
-
-.input__file-button {
-
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    // width: 100%;
-    // max-width: 290px;
-    // height: 60px;
-    margin: 0 auto;
-    padding: 8px 8px;
-    background: #1bbc9b;
-    color: #fff;
-    font-size: 1.125rem;
-    font-weight: 700;
-    border-radius: 3px;
-    cursor: pointer;
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -552,12 +726,26 @@
         }
     }
 }
+.footer__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    & .logo-link {
+        font-size: 28px;
+        font-weight: bold;
+    } 
+    & span {
+        font-size: 14px;
+    }
+}
 .footer__logo-link {
     display: flex;
     justify-content: center;
     align-items: center;
     background: #fff;
     margin-bottom: 10px;
+    padding: 10px 0;
 
 }
 .footer__logo-img {
