--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,38 +17,62 @@
     height: 72px;
     z-index: 10;
     background: #Fff;
-    // box-shadow: 0px -5px 5px -5px rgba(0, 0, 0, 0.6) inset;
     box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
+    
     & .container {
         padding: 10px 15px;
+        @media (max-width: 575.98px) { 
+            padding: 5px 10px;
+        }
+    }
+
+    @media (max-width: 575.98px) { 
+        height: 50px;
     }
 }
+@keyframes anim{
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
 .header__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 575.98px) { 
+        justify-content: center;
+    }
 }
 
 .header__logo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 575.98px) { 
+        font-size: 14px;
+    }
     & .logo-link {
         font-size: 28px;
         font-weight: bold;
         color: #000;
+        @media (max-width: 575.98px) { 
+            font-size: 18px;
+        }
     } 
     & span {
         font-size: 14px;
+        @media (max-width: 575.98px) { 
+            font-size: px;
+        }
     }
 }
 
-
-
 .header__nav {
-    // margin-right: auto;
     padding: 0 15px;
-
     & .menu__list {
         display: flex;
         
@@ -92,6 +116,9 @@
             background: #003dca;
         }
     }
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
 }
 .header__contact {
     display: flex;
@@ -109,16 +136,15 @@
         font-size: 15px;
         margin: 0 auto;
     }
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
+
 }
-
-
-
 
 .wrapper h3 {
     margin-bottom: 20px;
 }
-
-
 
 .head-section {
     position: relative;
@@ -130,142 +156,96 @@
     background-size: cover;
     background-position: right;
     margin-top: 72px;
+    @media (max-width: 575.98px) {
+        height: calc(100vh - 50px);
+        background-position: center;
+        margin-top: 50px;
+    }
     &::before{
         position: absolute;
         content: "";
         background-image: url('./../../img/test1.png');
         background-repeat: no-repeat;
-        
         width: 380px;
         height: 340px;
         bottom: 0;
         left: 10%;
         z-index: 0;
-
+        @media (max-width: 575.98px) { 
+            display: none;
+        }
     }
     &__inner {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: center;
         justify-content: space-between;
         margin-top: 3rem;
         position: relative;
-
+        @media (max-width: 575.98px) {
+            height: 100%;
+            flex-direction: column;
+            margin-top: 0;
+        }
     }
-    
     &__title {
         max-width: 850px;
         color: #fff;
+        @media (max-width: 575.98px) {
+            margin-bottom: 7%;
+        }
         h1 {
             margin-bottom: 2%;
             font-size: 32px;
+            @media (max-width: 575.98px) {
+                margin-bottom: 7%;
+                font-size: 20px;
+            }
         }
-    }
-
-    &__action {
-        display: flex;
-        
-    }
-
-    
-}
-
-
-.call-back__form {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    align-self: flex-start;
-    background: rgba(0,0,0,.6);
-    padding: 40px 20px;
-    border-radius: 5px;
-    .call-back__group {
-        display: flex;
-        flex-direction: column;
-        & label {
-            margin-bottom: 10px;
-            &:last-child {
-                margin-bottom: 0;
+        span {
+            @media (max-width: 575.98px) {
+                font-size: 12px;
             }
         }
     }
-
-    & .title-form {
-        color: #fff;
-        padding: 0 15px 20px;
-        text-align: center;
-        font-size: 20px;
-        min-width: 320px;
-        max-width: 350px;
-    }
-    & .input-form {
-        width: 100%;
-        border-radius: 5px;
-        outline: none;
-    }
-    & input {
-        padding: 7px 8px;
-        border: 1px solid #000;
-    }
-    & select {
-        padding: 6px 8px;
-        border: 1px solid;
-    }
-    & button {
-        background: #002d93;
-        border: 2px solid #002d93;
-        outline: none;
-        border-radius: 5px;
-        padding: 6px 16px;
-        cursor: pointer;
-        color: #fff;
-        &:hover {
-            border: 2px solid #003dca;
-            background: #003dca;
-        }
-    }
 }
+
 .application__form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     align-self: flex-start;
     background: rgba(0,0,0,.6);
     padding: 40px 20px;
     border-radius: 5px;
-    
+    @media (max-width: 575.98px) {
+        padding: 20px 20px;
+    }
     .title-form {
         color: #fff;
         padding: 0 15px 20px;
         text-align: center;
         font-size: 20px;
         min-width: 320px;
-        max-width: 350px;
+        max-width: 400px;
+        @media (max-width: 575.98px) {
+            font-size: 12px;
+            padding: 0 0 20px;
+            min-width: 0;
+        }
     }
     .input__wrapper {
         position: relative;
         display: flex;
         flex-direction: column;
-        
-    }
-    label {
-        margin-bottom: 10px;
-        &:last-child {
-            margin-bottom: 0;
-        }
     }
     .input__file {
+        width: 0;
         opacity: 0;
         visibility: hidden;
         position: absolute;
     }
-    
     .input__file-icon-wrapper {
         display: flex;
         align-items: center;
@@ -274,27 +254,119 @@
         border-right: 1px solid #fff;
         color:#fff;
     }
-    
-    .input__file-button-text {
-        line-height: 1;
-        margin-top: 1px;
-    }
-    
     .input__file-button {
-    
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        width: 100%;
-        margin: 0 auto;
-        padding: 8px 8px;
+        width: 250px;
+        max-width: 320px;
+        margin-bottom: 10px;
+        padding: 8px 10px;
         background: #1bbc9b;
         color: #fff;
-        font-size: 1.125rem;
+        font-size: 18px;
         font-weight: 700;
+        border: 1px solid #1bbc9b;
         border-radius: 3px;
         cursor: pointer;
+        overflow: hidden;
+        @media (max-width: 575.98px) {
+            justify-content: center;
+            padding: 6px 8px;
+            font-size: 14px;
+        }
+    }
+    .input__file-button-text {
+        line-height: 1;
+        margin-top: 1px;
+        margin-left: 10px;
+    }
+    & button {
+        display: none;
+        height: 50px;
+        margin-bottom: 10px;
+        padding: 6px 16px;
+        background: #002d93;
+        border: 2px solid #002d93;
+        outline: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+        &:hover {
+            border: 2px solid #003dca;
+            background: #003dca;
+        }
+        @media (max-width: 575.98px) {
+            height: 44px;
+            font-size: 14px;
+        }
+    }
+    > span {
+        color:#fff;
+        font-size: 12px;
+        @media (max-width: 575.98px) {
+            font-size: 10px;
+        }
+    }
+}
+
+.callback {
+    height: 300px;
+    background-image: url('./../../img/bg-about3.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    &__inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
+}
+
+.call-back__form {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    .call-back__group {
+        display: flex;
+        flex-direction: row;
+    }
+    & .title-form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        padding: 0 15px 20px;
+        text-align: center;
+        font-size: 26px;
+        min-width: 320px;
+    }
+    & label {
+        margin-right: 20px;
         
+    }
+    & .input-form {
+        border-radius: 5px;
+        outline: none;
+        padding: 7px 8px;
+        border: 1px solid #000;
+        font-size: 20px;
+    }
+    & select {
+        border: 1px solid #000;
+        padding: 6px 8px;
+        border-radius: 5px;
+        outline: none;
+        border: 1px solid;
+        font-size: 20px;
     }
     & button {
         background: #002d93;
@@ -309,9 +381,6 @@
             background: #003dca;
         }
     }
-    span {
-        color:#fff;
-    }
 }
 
 
@@ -321,27 +390,43 @@
 
 
 
+.services {
+    @media (max-width: 575.98px) { 
+        // display: none;
+    }
+}
 
 .services__inner {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     height: 100%;
+    @media (max-width: 575.98px) { 
+        flex-direction: column;
+        width: 100%;
+    }   
 }
 .services__tab-group {
     display: flex;
     flex-direction: column;
     margin-right: 50px;
+    @media (max-width: 575.98px) { 
+        margin-right: 0;
+    }
 }
 .services__content-group {
     display: flex;
-    min-width: 320px;
-    
 }
 .services__tab {
+    display: flex;
+    width: 350px;
     margin-bottom: 10px;
     padding: 8px 8px;
     cursor: pointer;
     border: 2px solid #003dca;
+    @media (max-width: 575.98px) { 
+        width: 100%;
+    }  
+
     &:last-child {
         margin-bottom: 0;
         
@@ -359,109 +444,20 @@
 }
 .services__content {
     display: none;
-    outline: 1px solid;
     width: 100%;
     padding: 8px 8px;
 }
 .services__content--active {
     display: block;
 }
-.services__tab {
-    display: flex;
+
+
+
+.reviews {
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
 }
-
-
-
-
-// .application {
-//     background: rgba(0,0,0,.6);
-//     // box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
-
-//     // &__form {
-//     //     display: flex;
-//     //     flex-direction: column;
-//     //     align-items: center;
-        
-//     //     padding: 30px 20px;
-//     //     .title-form {
-//     //         color: #fff;
-//     //         padding: 0 0 20px;
-//     //         text-align: center;
-//     //         font-size: 20px;
-//     //     }
-//     // }
-
-
-    
-//     &__submit {
-//         background: #002d93;
-//         border: 2px solid #002d93;
-//         color:#fff;
-//         padding: 8px 8px;
-//         cursor: pointer;
-//         border-radius: 5px;
-//         &:hover {
-//             border: 2px solid #003dca;
-//             background: #003dca;
-//         }
-//     }
-// }
-
-// .input__wrapper {
-//     position: relative;
-// }
-
-// .input__file {
-//     opacity: 0;
-//     visibility: hidden;
-//     position: absolute;
-// }
-
-// .input__file-icon-wrapper {
-//     // height: 60px;
-//     // width: 60px;
-//     // margin-right: 15px;
-//     padding: 8px;
-//     display: -webkit-box;
-//     display: -ms-flexbox;
-//     display: flex;
-//     -webkit-box-align: center;
-//     -ms-flex-align: center;
-//         align-items: center;
-//     -webkit-box-pack: center;
-//     -ms-flex-pack: center;
-//         justify-content: center;
-//     border-right: 1px solid #fff;
-// }
-
-// .input__file-button-text {
-//     line-height: 1;
-//     margin-top: 1px;
-// }
-
-// .input__file-button {
-
-//     display: flex;
-//     align-items: center;
-//     justify-content: flex-start;
-//     // width: 100%;
-//     // max-width: 290px;
-//     // height: 60px;
-//     margin: 0 auto;
-//     padding: 8px 8px;
-//     background: #1bbc9b;
-//     color: #fff;
-//     font-size: 1.125rem;
-//     font-weight: 700;
-//     border-radius: 3px;
-//     cursor: pointer;
-    
-// }
-
-
-
-
-
 .reviews__inner {
     display: flex;
     flex-direction: column;
@@ -603,6 +599,9 @@
         }
         
     }
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
 }
 
 
@@ -662,6 +661,17 @@
 
 
 
+.aboutus {
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
+}
+.license {
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
+}
+
 .flags {
     &__title {
         font-size: 16px;
@@ -671,7 +681,9 @@
         display: flex;
         align-items: center;
     }
-
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
 }
 .flag__slider {
     min-width: 0;
@@ -701,6 +713,9 @@
 .footer {
     background: #2c2c2c;
     color:#fff;
+    @media (max-width: 575.98px) { 
+        display: none;
+    }
 }
 .footer__inner {
     display: flex;
