--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,6 +433,69 @@ body {
   font-size: 12px;
 }
 
+.services__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  height: 100%;
+}
+
+.services__tab-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 50px;
+}
+
+.services__content-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.services__tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 350px;
+  margin-bottom: 10px;
+  padding: 8px 8px;
+  cursor: pointer;
+  border: 2px solid #003dca;
+}
+
+.services__tab:last-child {
+  margin-bottom: 0;
+}
+
+.services__tab:hover {
+  background: #003dca;
+  color: #fff;
+  border: 2px solid #003dca;
+}
+
+.services__tab--active {
+  background: #002d93;
+  color: #fff;
+  border: 2px solid #003dca;
+}
+
+.services__content {
+  display: none;
+  width: 100%;
+  padding: 8px 8px;
+}
+
+.services__content--active {
+  display: block;
+}
+
 .callback {
   height: 300px;
   background-image: url("./../../img/bg-about3.png");
@@ -468,7 +531,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 5px;
 }
 
 .call-back__form .call-back__group {
@@ -532,69 +594,6 @@ body {
 .call-back__form button:hover {
   border: 2px solid #003dca;
   background: #003dca;
-}
-
-.services__inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  height: 100%;
-}
-
-.services__tab-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-right: 50px;
-}
-
-.services__content-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.services__tab {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 350px;
-  margin-bottom: 10px;
-  padding: 8px 8px;
-  cursor: pointer;
-  border: 2px solid #003dca;
-}
-
-.services__tab:last-child {
-  margin-bottom: 0;
-}
-
-.services__tab:hover {
-  background: #003dca;
-  color: #fff;
-  border: 2px solid #003dca;
-}
-
-.services__tab--active {
-  background: #002d93;
-  color: #fff;
-  border: 2px solid #003dca;
-}
-
-.services__content {
-  display: none;
-  width: 100%;
-  padding: 8px 8px;
-}
-
-.services__content--active {
-  display: block;
 }
 
 .reviews__inner {
@@ -1060,6 +1059,10 @@ body {
     display: none;
   }
 
+  .wrapper h3 {
+    margin-bottom: 15px;
+  }
+
   .head-section {
     height: calc(100vh - 50px);
     background-position: center;
@@ -1119,10 +1122,6 @@ body {
     font-size: 10px;
   }
 
-  .callback {
-    display: none;
-  }
-
   .services__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1139,15 +1138,41 @@ body {
     width: 100%;
   }
 
+  .call-back__form .call-back__group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .call-back__form .title-form {
+    font-size: 19px;
+    padding: 0 10px 15px 10px;
+  }
+
+  .call-back__form label {
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+
+  .call-back__form .input-form {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .call-back__form select {
+    font-size: 14px;
+  }
+
+  .call-back__form button {
+    margin-top: 15px;
+  }
+
   .reviews {
     display: none;
   }
 
   .contact {
-    display: none;
-  }
-
-  .aboutus {
     display: none;
   }
 
