--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,18 +646,16 @@ body {
   top: 50%;
   z-index: 1;
   font-size: 0;
-  width: 30px;
-  height: 50px;
 }
 
 .reviews__slider .slick-arrow.slick-prev {
-  left: 0;
-  background: url("./../../img/la.svg") 0 0/100% no-repeat;
+  left: -10px;
+  background: url("./../../img/la.svg") 0 0 no-repeat;
 }
 
 .reviews__slider .slick-arrow.slick-next {
-  right: 0;
-  background: url("./../../img/ra.svg") 0 0/100% no-repeat;
+  right: -10px;
+  background: url("./../../img/ra.svg") 0 0 no-repeat;
 }
 
 .reviews__slider .slick-prev:before {
@@ -1079,11 +1077,14 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     margin-top: 0;
   }
 
   .head-section__title {
-    margin-bottom: 7%;
+    margin-bottom: 25%;
   }
 
   .head-section__title h1 {
@@ -1168,8 +1169,16 @@ body {
     margin-top: 15px;
   }
 
-  .reviews {
-    display: none;
+  .reviews__slider {
+    padding: 0 10px;
+  }
+
+  .review__item-text {
+    font-size: 14px;
+  }
+
+  .review__item-info {
+    font-size: 12px;
   }
 
   .contact {
