--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,7 +626,6 @@ body {
 .reviews__slider .slick-list {
   height: 100%;
   min-width: 0;
-  overflow: hidden;
 }
 
 .reviews__slider .slick-track {
@@ -688,7 +687,7 @@ body {
   padding: 20px;
   max-width: 100%;
   margin: 0 10px;
-  height: 230px;
+  height: 100%;
   border-radius: 5px;
   -webkit-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
@@ -701,6 +700,10 @@ body {
   font-style: italic;
 }
 
+.review__item-text {
+  margin: 15px 0;
+}
+
 .review__item-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -711,6 +714,7 @@ body {
 }
 
 .review__item.slick-center {
+  margin: 50px 0;
   -webkit-transform: scale(1.4);
       -ms-transform: scale(1.4);
           transform: scale(1.4);
@@ -718,10 +722,6 @@ body {
 
 .review__item.slick-center .review__item-title {
   font-size: 20px;
-}
-
-.review__item.slick-center .review__item-text {
-  font-size: 10px;
 }
 
 .review__item.slick-center .review__item-info {
@@ -823,7 +823,7 @@ body {
   color: #003dca;
 }
 
-.contact__call-back {
+.contact__question-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -834,16 +834,16 @@ body {
   width: 100%;
 }
 
-.contact__group {
+.contact__question-form .contact__group {
   width: 100%;
   margin-bottom: 20px;
 }
 
-.contact__group:last-child {
+.contact__question-form .contact__group:last-child {
   margin-bottom: 0;
 }
 
-.contact__input {
+.contact__question-form .contact__input {
   width: 100%;
   padding: 8px 8px;
   border: none;
@@ -851,11 +851,12 @@ body {
   outline: none;
 }
 
-.contact__textarea {
+.contact__question-form .contact__textarea {
+  width: 100%;
   padding: 8px 8px;
 }
 
-.contact__submit {
+.contact__question-form .contact__submit {
   background: #002d93;
   border: 2px solid #002d93;
   color: #fff;
@@ -864,7 +865,7 @@ body {
   border-radius: 5px;
 }
 
-.contact__submit:hover {
+.contact__question-form .contact__submit:hover {
   border: 2px solid #003dca;
   background: #003dca;
 }
@@ -1173,6 +1174,14 @@ body {
     padding: 0 10px;
   }
 
+  .reviews__slider .slick-track {
+    padding: 10px 0;
+  }
+
+  .review__item {
+    height: 100%;
+  }
+
   .review__item-text {
     font-size: 14px;
   }
@@ -1182,7 +1191,37 @@ body {
   }
 
   .contact {
-    display: none;
+    -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+            box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  }
+
+  .contact__inner {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 0;
+  }
+
+  .contact__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contact__info {
+    padding: 0;
+    margin-bottom: 50px;
+  }
+
+  .contact__item h4 i {
+    width: 30px;
+    font-size: 18px;
+    margin-right: 5px;
+  }
+
+  .contact__item ul,
+  .contact__item p {
+    padding-left: 37px;
   }
 
   .license {
