--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1228,8 +1228,11 @@ body {
     display: none;
   }
 
-  .flags {
-    display: none;
+  .flags__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .footer {
