--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ a {
 
 html,
 body {
+  position: relative;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
 }
@@ -879,9 +880,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .flag__slider {
@@ -898,12 +900,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
   padding: 0 10px;
 }
 
 .flag__slider-item img {
   width: 60px;
+  height: 40px;
 }
 
 .flag__slider .slick-track {
@@ -956,6 +958,16 @@ body {
 
 .footer__item a:hover {
   color: #a0a0a0;
+}
+
+.footer__item.copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .footer__logo {
@@ -1015,12 +1027,32 @@ body {
           flex-direction: column;
 }
 
+.footer__menu-item {
+  margin-bottom: 3px;
+}
+
 .footer__menu-link {
   color: #002d93;
 }
 
 .footer__menu-link:hover {
   color: #fff;
+}
+
+.footer__service {
+  margin-bottom: 20px;
+}
+
+.footer__contact {
+  font-size: 18px;
+}
+
+.footer__contact-item {
+  margin-bottom: 10px;
+}
+
+.mobile-bar {
+  display: none;
 }
 
 @media (max-width: 575.98px) {
@@ -1228,7 +1260,132 @@ body {
     display: none;
   }
 
+  .flags__title {
+    margin-bottom: 15px;
+  }
+
+  .flags__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
   .footer {
-    display: none;
+    padding-bottom: 30px;
+  }
+
+  .footer__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+  }
+
+  .footer__column {
+    max-width: 100%;
+  }
+
+  .footer__item h3 {
+    margin-bottom: 5px;
+  }
+
+  .footer__item.copyright {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .footer__item.copyright p {
+    padding-right: 5px;
+  }
+
+  .footer__item {
+    padding-bottom: 20px;
+  }
+
+  .mobile-bar {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    z-index: 10;
+  }
+
+  .mobile-bar .container {
+    padding: 5px 5px;
+  }
+
+  .mobile-bar__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 5px 0;
+    height: 100%;
+  }
+
+  .mobile-bar .mobile-burger {
+    position: relative;
+    display: block;
+  }
+
+  .mobile-bar .mobile-burger span {
+    display: block;
+    background: #000;
+    height: 5px;
+    border-radius: 10px;
+  }
+
+  .mobile-bar .mobile-burger span:nth-child(1) {
+    width: 35px;
+  }
+
+  .mobile-bar .mobile-burger span:nth-child(2) {
+    width: 25px;
+    margin: 5px 0;
+  }
+
+  .mobile-bar .mobile-burger span:nth-child(3) {
+    width: 45px;
+  }
+
+  .mobile-bar .fa-envelope {
+    font-size: 30px;
+  }
+
+  .mobile-bar .fa-phone {
+    font-size: 26px;
+  }
+
+  .mobile-bar .fa-whatsapp {
+    font-size: 30px;
+    color: #35DB53;
+  }
+
+  .mobile-bar .mobile__nav {
+    position: absolute;
+    bottom: -500%;
+    left: 0;
+    background: #fff;
+    width: 100%;
+    padding: 10px 30px;
+  }
+
+  .mobile-bar .mobile__nav-item {
+    margin: 10px 0;
+  }
+
+  .mobile-bar .mobile__nav-link {
+    color: #000;
   }
 }
